# ctint

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  test.hpp
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yml
benchmark/: hubbard_atom.ipynb
benchmark/.ipynb_checkpoints/: hubbard_atom-checkpoint.ipynb
benchmark/g2w_ctint_vs_cthyb/: ctint_M4t_vs_cthyb.ipynb  jperp_cthyb.py  jperp_ctint.py  jperp_ctint_M4t.py  readme.rst
benchmark/scripts/: lattQMC_generic.py  single_site_all.py  single_site_all_generic.py
benchmarks/: cyclic_difference.cpp  plaquette_M3.cpp  plaquette_M4.cpp  plaquette_benchmark.cpp
c++/: CMakeLists.txt  README.txt  container_set.hpp  dets.hpp  fourier.hpp  fourier_factories.hpp  lazy_det_operation.cpp  lazy_det_operation.hpp  measures.hpp  nfft_buf.hpp  params.cpp  params.hpp  post_process.cpp  post_process.hpp  qmc_config.cpp  qmc_config.hpp  solver_core.cpp  solver_core.hpp  types.hpp  vertex.cpp  vertex.hpp  vertex_factories.cpp
c++/measures/: F_tau.cpp  F_tau.hpp  M2_tau.hpp  M2_tau_impl.hpp  M3_iw.hpp  M3_iw_impl.hpp  M3ph_iw.cpp  M3ph_iw.hpp  M3ph_tau.cpp  M3pp_iw.cpp  M3pp_iw.hpp  M3pp_tau.cpp  M4_iw.cpp  M4_iw.hpp  M4_tau.cpp  M4_tau.hpp  M_iw.cpp  M_iw.hpp  M_tau.cpp  M_tau.hpp  average_sign.hpp
c++/moves/: insert.hpp  remove.cpp  remove.hpp
c++/triqs/arrays/: block_matrix.hpp
c++/triqs_ctint/: CMakeLists.txt  container_set.hpp  dets.hpp  fourier.hpp  itertools.hpp  lazy_det_operation.cpp  lazy_det_operation.hpp  measures.hpp  nfft_buf.hpp  params.cpp  params.hpp  post_process.cpp  post_process.hpp  qmc_config.cpp  qmc_config.hpp  solver_core.cpp  solver_core.hpp  toto.cpp  toto.hpp  types.hpp  vertex.cpp  vertex.hpp  vertex_factories.cpp  vertex_factories.hpp
c++/triqs_ctint/measures/: F_tau.hpp  G2_fluct_diag_omega_tau.hpp  G2_fluct_diag_omega_tau_impl.hpp  G2_fluct_diag_tau.hpp  G2_fluct_diag_tau_impl.hpp  M2_tau.hpp  M2_tau_impl.hpp  M3ph_iw.cpp  M3ph_iw.hpp  M3ph_tau.cpp  M3ph_tau.hpp  M3pp_iw.cpp  M3pp_iw.hpp  M3pp_tau.cpp  M3pp_tau.hpp  M3xph_tau.cpp  M3xph_tau.hpp  M4_iw.cpp  M4_iw.hpp  M4ph_iw.cpp  M4ph_iw.hpp  M4pp_iw.cpp  M4pp_iw.hpp  M_iw.cpp  M_iw.hpp  M_tau.cpp  M_tau.hpp  M_tau_samples.cpp  M_tau_samples.hpp  auto_corr_time.cpp  auto_corr_time.hpp  average_k.cpp  average_k.hpp  average_sign.cpp  average_sign.hpp  chi2_tau.hpp  chi2_tau_impl.hpp  chiAB_tau.cpp  chiAB_tau.hpp  density.cpp  (+8 more)
c++/triqs_ctint/moves/: insert.cpp  insert.hpp  remove.cpp  remove.hpp  spinflip.cpp  spinflip.hpp
doc/: CMakeLists.txt  CTINT_benchmark_doc.tex  CTINT_implementation.lyx  CTINT_implementation.tex  ChangeLog.md  about.rst  common.hpp  conf.py.in  contents.rst  documentation.rst  index.rst  install.rst  make_doc.sh  measures.rst  reference.rst
doc/_templates/: sideb.html
doc/examples/: 2sites.py  4-sites-cdmft-int.py  anderson.py  input_sc_dos.py  optimize_sign.py
doc/implementation_notes/: CTINT_implementation.tex
doc/reference/: parameters_constr_params_t.rst  parameters_solve_params_t.rst
doc/src/examples/: 4-sites-cdmft-int.py
packaging/: CMakeLists.txt  TRIQS-ctint-3.0.0-foss-2019a-Python-3.7.2.eb  TRIQS-ctint-3.1.0-foss-2021b.eb  TRIQS-ctint-3.2.0-foss-2021b.eb  TRIQS-ctint-foss-2021b.eb.in
packaging/conda/: meta.yaml  meta.yaml.in
python/: CMakeLists.txt  __init__.py  converters.hxx  ctint_converters.hxx  ctint_desc.py  ctint_parameters.rst  ctint_solver.py  parameters.rst  postproc_desc.py  postproc_parameters.rst  solver_analysis.ipynb  solver_core_desc.py  triqs_ctint_converters.hxx  triqs_ctint_desc.py
python/notebooks/: solver_analysis.ipynb
python/triqs_ctint/: CMakeLists.txt  __init__.py  parameters.rst  parameters_params_t.rst  parameters_solve_params_t.rst  post_process_desc.py  solver.py  solver_core_converters.hxx  solver_core_desc.py  toto_module_desc.py  version.py.in
share/: CMakeLists.txt  triqs_ctint.modulefile.in  triqs_ctintvars.sh.in
share/cmake/: CMakeLists.txt  triqs_ctint-config-version.cmake.in  triqs_ctint-config.cmake.in
test/c++/: CMakeLists.txt  anderson.cpp  anderson.ref.h5  gf_real_imag.cpp  nfft.cpp  nfft_buf.cpp  plaquette.cpp  rerun.cpp  solver_hdf5.cpp  solver_rerun.cpp  toto.cpp  util.cpp
test/python/: CMakeLists.txt  Solver.h5  Toto.py  chain.py
test/python/dynamic/: CMakeLists.txt  Untitled.ipynb  all.out.h5  all.py  all.ref.h5  all_continuousBoson.py  all_continuousBoson.ref.h5  densdens.py  densdens.ref.h5  jperp.out.h5  jperp.py  jperp.ref.h5
test/python/static/: CMakeLists.txt  Solver.h5  anderson.py  anderson.ref.h5  anderson_py.py  anderson_py.ref.h5  jacobi_test.py  jperp.ref.h5  plaquette.py  rerun.py  solver_h5io.py  solver_h5py.py  supercond.py  supercond.ref.h5  two_site.out.h5  two_site.py  two_site.ref.h5
